--- a/examples/with-next/pages/global.css
+++ b/examples/with-next/pages/global.css
@@ -2,25 +2,23 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #ffffff;
-
+  color: rgb(255 255 255 / 87%);
+  background-color: #fff;
   font-synthesis: none;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 
-  --markprompt-background: #ffffff;
+  --markprompt-background: #fff;
   --markprompt-foreground: #171717;
   --markprompt-muted: #fafafa;
   --markprompt-mutedForeground: #737373;
   --markprompt-border: #e5e5e5;
-  --markprompt-input: #ffffff;
+  --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
-  --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryForeground: #fff;
   --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
@@ -41,16 +39,16 @@
     --markprompt-muted: #171717;
     --markprompt-mutedForeground: #737373;
     --markprompt-border: #262626;
-    --markprompt-input: #ffffff;
+    --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
-    --markprompt-primaryForeground: #ffffff;
+    --markprompt-primaryForeground: #fff;
     --markprompt-primaryMuted: #8285f4;
     --markprompt-secondary: #0e0e0e;
-    --markprompt-secondaryForeground: #ffffff;
+    --markprompt-secondaryForeground: #fff;
     --markprompt-primaryHighlight: #ec4899;
     --markprompt-secondaryHighlight: #a855f7;
     --markprompt-overlay: #00000040;
-    --markprompt-ring: #ffffff;
+    --markprompt-ring: #fff;
   }
 }
 
@@ -59,8 +57,8 @@ html {
 }
 
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
