Add slight padding to prevent hidden overflow border

--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -991,7 +991,7 @@
 :where(.MarkpromptSearchResultLink) {
   display: block;
   border-radius: 0.5rem;
-  padding: 0.75rem 1rem;
+  padding: 0.5rem 1rem;
   background-color: var(--markprompt-muted);
 }
 
@@ -1005,6 +1005,7 @@
   align-items: center;
   box-sizing: border-box;
   gap: 1rem;
+  padding: 0.25rem 0;
 }
 
 :where(.MarkpromptSearchResultIconWrapper) {
