--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -16,6 +16,7 @@
   --markprompt-ring: #0ea5e9;
   --markprompt-radius: 8px;
   --markprompt-text-size: 0.875rem;
+  --markprompt-text-size-xs: 0.75rem;
   --markprompt-button-icon-size: 1rem;
   --markprompt-icon-stroke-width: 2px;
 }
@@ -1080,8 +1081,8 @@
   border-style: solid;
   border-width: 1px;
   padding: 1px 8px;
-  font-size: calc(var(--markprompt-text-size) * 0.85);
-  font-weight: 500;
+  font-size: var(--markprompt-text-size-xs);
+  font-weight: 600;
 }
 
 :where([aria-selected='true'] .MarkpromptSearchResultTag) {
