--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -181,6 +181,52 @@
   outline-offset: 2px;
 }
 
+:where(.MarkpromptTabsContainer) {
+  position: relative;
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
+:where(.MarkpromptTabsList) {
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  border-bottom: 1px solid var(--markprompt-border);
+}
+
+:where(.MarkpromptTab) {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.5rem;
+  font-weight: 600;
+  padding: 0.5rem;
+  font-size: var(--markprompt-text-size);
+  background-color: transparent;
+  outline: none;
+  border: 0;
+  cursor: pointer;
+}
+
+:where(.MarkpromptTab[data-state='active']) {
+  border-top: 2px solid transparent;
+}
+
+:where(.MarkpromptTab[data-state='active']) {
+  border-bottom: 2px solid var(--markprompt-primary);
+  color: var(--markprompt-primary);
+}
+
+:where(.MarkpromptTab):not([data-state='active']) {
+  border-top: 2px solid transparent;
+  border-bottom: 2px solid transparent;
+}
+
+:where(.MarkpromptTab):hover {
+  color: var(--markprompt-primary);
+}
+
 :where(.MarkpromptViews) {
   position: relative;
   overflow: hidden;
@@ -228,7 +274,7 @@
 
 :where(.MarkpromptClose kbd) {
   font-weight: 600;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 0.5rem;
 }
 
@@ -251,8 +297,15 @@
   border-color: transparent;
 }
 
-:where(.MarkpromptHighlightedIcon) {
+:where(.MarkpromptPrimaryIcon) {
   color: var(--markprompt-primary);
+}
+
+:where(.MarkpromptHighlightedIcon) {
+  color: var(--markprompt-primaryHighlight);
+}
+
+:where(.MarkpromptBaseIcon) {
   width: var(--markprompt-button-icon-size);
   height: var(--markprompt-button-icon-size);
   stroke-width: var(--markprompt-icon-stroke-width);
