--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -174,7 +174,6 @@
   width: 100%;
   height: 100%;
   color: var(--markprompt-foreground);
-  overflow: hidden;
   display: grid;
   grid-template-rows: 1fr auto;
   outline: 2px solid transparent;
@@ -182,9 +181,10 @@
 }
 
 :where(.MarkpromptTabsContainer) {
-  position: relative;
+  height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
+  overflow-y: auto;
 }
 
 :where(.MarkpromptTabsList) {
@@ -199,7 +199,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 0.5rem;
+  gap: 0.25rem;
   font-weight: 600;
   padding: 0.5rem;
   font-size: var(--markprompt-text-size);
@@ -235,6 +235,9 @@
 }
 
 :where(.MarkpromptSearchView) {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  height: 100%;
 }
 
 :where(.MarkpromptPromptView) {
@@ -259,7 +262,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
   position: absolute;
-  top: 0.48rem;
+
   right: 0.75rem;
 }
 
@@ -1099,7 +1102,7 @@
   display: list-item;
   text-align: -webkit-match-parent;
   padding: 0;
-  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 :where(.MarkpromptSearchResult a) {
