--- a/examples/with-markprompt-web/src/style.css
+++ b/examples/with-markprompt-web/src/style.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgb(255 255 255 / 87%);
+  color: #737373;
   background-color: #f5f5f5;
   font-synthesis: none;
   text-rendering: optimizelegibility;
