--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -811,16 +811,16 @@
 }
 
 :where(.MarkpromptPromptFeedback) {
-  /* background-color: var(--markprompt-muted); */
-  margin: 0 2rem 1.5rem;
-  padding: 0.75rem 1rem;
-  border: 1px solid var(--markprompt-border);
-  border-radius: 0.25rem;
+  margin: 0 2rem 1rem;
+  padding: 0.75rem 0;
+  border-top: 1px solid var(--markprompt-border);
 }
 
 :where(.MarkpromptPromptFeedback h3) {
-  font-size: var(--markprompt-text-size);
+  animation: markprompt-fade-in 500ms ease-out forwards 1;
+  font-size: var(--markprompt-text-size-xs);
   font-weight: 600;
+  color: var(--markprompt-mutedForeground);
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
@@ -833,27 +833,38 @@
 
 :where(.MarkpromptPromptFeedback div) {
   display: flex;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
 
 :where(.MarkpromptPromptFeedback button) {
   cursor: pointer;
-  color: var(--markprompt-mutedForeground);
+  color: var(--markprompt-foreground);
   border: 1px solid var(--markprompt-border);
   background-color: var(--markprompt-muted);
+  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.25rem;
-  border-radius: 0.25rem;
+  padding: 0.375rem 0.5rem;
+  border-radius: 0.375rem;
+  animation-name: markprompt-slide-up;
+  animation-duration: 1s;
+  animation-fill-mode: backwards;
+  transition-timing-function: ease-in-out;
+}
+
+:where(.MarkpromptPromptFeedback button[data-active='true']) {
+  background-color: var(--markprompt-primary);
+  color: var(--markprompt-primaryForeground);
+  border: 1px solid var(--markprompt-primary);
 }
 
 :where(.MarkpromptPromptFeedback button svg) {
   display: block;
 }
 
-:where(.MarkpromptPromptFeedback button:hover) {
-  opacity: 0.8;
+.MarkpromptPromptFeedback button:hover {
+  opacity: 0.7;
 }
 
 :where([data-loading-state='preload'] .MarkpromptProgress) {
