--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -904,6 +904,12 @@
   font-size: 0.75rem;
   color: var(--markprompt-mutedForeground);
   overflow: auto;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+  transition-property: opacity, transform;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 :where(.MarkpromptReferences[data-loading-state='preload']) {
