--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -904,9 +904,7 @@
   font-size: 0.75rem;
   color: var(--markprompt-mutedForeground);
   overflow: auto;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-basis: auto;
+  flex: 0 0 auto;
   transition-property: opacity, transform;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
